[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/GUIItems/Package/ButtonsOriginal/ButtonsOriginal_0002_Round-Rect--------------.png" type="Texture" id=1]
[ext_resource path="res://Rubik-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
use_filter = true
font_data = ExtResource( 2 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullRekt" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FullRekt"]
margin_left = 5.0
margin_top = 5.0
margin_right = 535.0
margin_bottom = 1195.0

[node name="TopLabel" type="HBoxContainer" parent="FullRekt/VBoxContainer"]
margin_right = 530.0
margin_bottom = 48.0

[node name="BottemRekt" type="MarginContainer" parent="FullRekt/VBoxContainer/TopLabel"]
margin_right = 366.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreRekt" type="MarginContainer" parent="FullRekt/VBoxContainer/TopLabel"]
margin_left = 370.0
margin_right = 530.0
margin_bottom = 48.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="FullRekt/VBoxContainer/TopLabel/HighscoreRekt"]
margin_right = 160.0
margin_bottom = 48.0
rect_min_size = Vector2( 160, 48 )
texture = ExtResource( 1 )
expand = true

[node name="Score" type="Label" parent="FullRekt/VBoxContainer/TopLabel/HighscoreRekt"]
margin_right = 160.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="FullRekt/VBoxContainer"]
margin_top = 52.0
margin_right = 530.0
margin_bottom = 52.0
